--- a/exercicios/ex006-paginas/tabuada/index.html
+++ b/exercicios/ex006-paginas/tabuada/index.html
@@ -19,7 +19,9 @@
         <section>
             <div>
 
-                <p>Insira um número:<input id="num" type="number" min="0"><button onclick="verificar()">Gerar Tabuada</button></p>
+                <p>Insira um número:<input id="num" type="number" min="0"></p>
+
+                <button onclick="verificar()">Gerar Tabuada</button>
 
             </div>
             <div id="resultado">
