--- a/exercicios/ex006-paginas/hackeado/index.html
+++ b/exercicios/ex006-paginas/hackeado/index.html
@@ -23,6 +23,7 @@
             text-align: center;
             font-family: monospace;
             padding: 30px;
+            font-size: 3em;
             color: lime;
             position: absolute;
             top: 50vh;
@@ -34,10 +35,10 @@
         div{
             color: rgb(255, 255, 255);
             position: absolute;
-            top: 65vh;
+            top: 70vh;
             left: 50vw;
             transform: translate(-50%, -50%);
-            font-size: larger;
+            font-size: 2em;
             background-color: rgb(158, 0, 0);
             padding-left: 15px;
             padding-right: 15px;
