--- a/exercicios/ex006-paginas/hackeado/index.html
+++ b/exercicios/ex006-paginas/hackeado/index.html
@@ -26,7 +26,7 @@
             font-size: 3em;
             color: lime;
             position: absolute;
-            top: 50vh;
+            top: 40vh;
             left: 50vw;
             transform: translate(-50%, -50%);
             
@@ -44,6 +44,8 @@
             padding-right: 15px;
             font-family: Arial, Helvetica, sans-serif;
             border: 3px inset black;
+            text-align: center;
+            width: 400px;
             
         }
     </style>
