--- a/exercicios/ex006-paginas/hackeado/index.html
+++ b/exercicios/ex006-paginas/hackeado/index.html
@@ -23,7 +23,8 @@
             text-align: center;
             font-family: monospace;
             padding: 30px;
-            font-size: 3em;
+            font-size: 2.5em;
+            width: 350px;
             color: lime;
             position: absolute;
             top: 40vh;
@@ -45,7 +46,8 @@
             font-family: Arial, Helvetica, sans-serif;
             border: 3px inset black;
             text-align: center;
-            width: 400px;
+            width: 350px;
+            font-weight: bold;
             
         }
     </style>
